Fixed overflow issue and changled logo

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 ul {
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
     gap: 10px;
@@ -30,13 +31,16 @@ h1 {
 
 p {
     padding: 0;
-    margin: 20px;
+    margin: 0;
+    max-width: 800px;
+    color: white ;
 }
 
 .logo {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 
 .logo-img {
@@ -51,7 +55,8 @@ p {
     background-color: #6730EC;
     margin: 0;
     padding: 5px 10px 5px 10px;
-    height: 50px;
+    min-height: 50px;
+    border-bottom: 3px dotted white;
 }
 
 .about-img {
@@ -62,7 +67,8 @@ p {
 
 .about {
     display: flex;
-    height: 300px;
+    min-height: 300px;
     justify-content: space-around;
     align-items: center;
+    background-color: #6730EC;
 }
